force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/Batch_Filter_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Batch_Filter_Date_Range__c</fullName>
    <defaultValue>30</defaultValue>
    <description>When "Enable Opportunity Last Modified Batch Filter" is checked, this field determines the amount of days after being modified that an Opportunity should be included in Recurring Donation Batch jobs.</description>
    <inlineHelpText>When "Enable Opportunity Last Modified Batch Filter" is checked, this field determines the amount of days after being modified that an Opportunity should be included in Recurring Donation Batch jobs.</inlineHelpText>
    <label>Batch Filter Date Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>