force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/DataMigrationBatchSize__c.field-meta.xml
<CustomField>
    <fullName>DataMigrationBatchSize__c</fullName>
    <defaultValue>25</defaultValue>
    <description>The number of records to process at a time when migrating existing Recurring Donation records to the Enhanced Recurring Donations data model.</description>
    <inlineHelpText>The number of records to process at a time when migrating existing Recurring Donation records to the Enhanced Recurring Donations data model.</inlineHelpText>
    <label>Enhanced RD Data Migration Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>