force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/DisableRollupsWhenCreatingInstallments__c.field-meta.xml
<CustomField>
    <fullName>DisableRollupsWhenCreatingInstallments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, and if Customizable Rollups are enabled, then immediate rollup calculations are disabled when new Installment Opportunities are created for a Recurring Donation.</description>
    <inlineHelpText>When selected, and if Customizable Rollups are enabled, then immediate rollup calculations are disabled when new Installment Opportunities are created for a Recurring Donation.</inlineHelpText>
    <label>Disable CRLP When Creating Installments</label>
    <type>Checkbox</type>
</CustomField>