force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/Enable_Opportunity_Batch_Filter__c.field-meta.xml
<CustomField>
    <fullName>Enable_Opportunity_Batch_Filter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Recurring Donation Opportunity Evaluation batch job limits the number of Donations selected for recalculation by only including Active or Paused Recurring Donations. This helps to improve nightly job performance.</description>
    <inlineHelpText>When checked, the Recurring Donation Opportunity Evaluation batch job limits the number of Donations selected for recalculation by only including Active or Paused Recurring Donations. This helps to improve nightly job performance.</inlineHelpText>
    <label>Enable Opportunity Batch Filter</label>
    <type>Checkbox</type>
</CustomField>