force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/EnableChangeHistory__c.field-meta.xml
<CustomField>
    <fullName>EnableChangeHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, NPSP creates a Recurring Donation Change History record each time amount, schedule, or campaign fields of a Recurring Donation are updated.</description>
    <inlineHelpText>When enabled, NPSP creates a Recurring Donation Change History record each time amount, schedule, or campaign fields of a Recurring Donation are updated.</inlineHelpText>
    <label>Enable Recurring Donation Change History</label>
    <type>Checkbox</type>
</CustomField>