force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/Exclude_Closed_Recurring_Donations__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Closed_Recurring_Donations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude Closed Recurring Donations from the Recurring Donation Opportunity Evaluation batch job.</description>
    <inlineHelpText>Exclude Closed Recurring Donations from the Recurring Donation Opportunity Evaluation batch job.</inlineHelpText>
    <label>Exclude Closed Recurring Donations</label>
    <type>Checkbox</type>
</CustomField>