force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/NextDonationDateMatchRangeDays__c.field-meta.xml
<CustomField>
    <fullName>NextDonationDateMatchRangeDays__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new
            installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to
            Recurring Donations where Installment Period is Monthly or Yearly.</description>
    <inlineHelpText>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new
            installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to
            Recurring Donations where Installment Period is Monthly or Yearly.</inlineHelpText>
    <label>Next Donation Date Match Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>