force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/Recurring_Donation_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>The number of records to process at a time when running the Recurring Donations batch job. The default size is 50. Reduce to a smaller number if the Recurring Donations batch job is failing due to system limits.</description>
    <inlineHelpText>The number of records to process at a time when running the Recurring Donations batch job. The default size is 50. Reduce to a smaller number if the Recurring Donations batch job is failing due to system limits.</inlineHelpText>
    <label>Recurring Donation Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>