force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/RecurringDonations2EnablementState__c.field-meta.xml
<CustomField>
    <fullName>RecurringDonations2EnablementState__c</fullName>
    <description>Contains Enhanced Recurring Donation enablement confirmations and state.</description>
    <inlineHelpText>Contains Enhanced Recurring Donation enablement confirmations and state.</inlineHelpText>
    <label>Recurring Donations Enablement State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>