force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/StatusAutomationClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>StatusAutomationClosedStatus__c</fullName>
    <description>The status Recurring Donation will be set to when the Status Automation determine the Recurring Donation will be Closed.</description>
    <inlineHelpText>The status Recurring Donation will be set to when the Status Automation determine the Recurring Donation will be Closed.</label>
    <label>Status Automation CLosed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>