force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/StatusAutomationDaysForClosed__c.field-meta.xml
<CustomField>
    <fullName>StatusAutomationDaysForClosed__c</fullName>
    <description>The number of days plus the expected installment date exceeds to update the Recurring Donation Status&apos;s to Closed</description>
    <inlineHelpText>The number of days plus the expected installment date exceeds to update the Recurring Donation Status&apos;s to Closed</inlineHelpText>
    <label>Status Automation Days for Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>