force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/StatusAutomationLapsedStatus__c.field-meta.xml
<CustomField>
    <fullName>StatusAutomationLapsedStatus__c</fullName>
    <description>The status Recurring Donation will be set to when the Status Automation determine the Recurring Donation will be Lapsed.</description>
    <inlineHelpText>The status Recurring Donation will be set to when the Status Automation determine the Recurring Donation will be Lapsed.</label>
    <label>Status Automation Lapsed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>