force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/StatusAutomationLapsedValue__c.field-meta.xml
<CustomField>
    <fullName>StatusAutomationLapsedValue__c</fullName>
    <description>The Recurring Donation Status set when Status Automation updates the Recurring Donation record as Lapsed.</description>
    <inlineHelpText>The Recurring Donation Status set when Status Automation updates the Recurring Donation record as Lapsed.</inlineHelpText>
    <label>Status Automation Lapsed Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>