force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/StatusMappingDeploymentId__c.field-meta.xml
<CustomField>
    <fullName>StatusMappingDeploymentId__c</fullName>
    <description>Status mapping custom metadata deployment Id</description>
    <inlineHelpText>Status mapping custom metadata deployment Id</inlineHelpText>
    <label>Status Mapping Deployment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>